<resources>
    <string name="app_name">TOPHotels</string>
    <string name="etEmailRegistar">Insira o endereço de email</string>
    <string name="btEntrar">Entrar</string>
    <string name="tvEsqueceuSenha">Esqueceu a sua senha ?</string>
    <string name="tvRegisto">Registe-se aqui!</string>

    <string name="etPrimeiroNome">Insira o seu primeiro nome</string>
    <string name="etUltimoNome">Insira o seu último nome</string>

    <string name="etNomeUtilizadorLogin">Insira o nome de utilizador</string>
    <string name="etPasswordLogin">Insira a sua password</string>

    <string name="etNomeUtilizadorRegisto">Insira o nome de utilizador</string>
    <string name="etEmailRegisto">Insira o endereço de email</string>
    <string name="etPasswordRegisto">Insira a sua password</string>
    <string name="etConfirmaPasswordRegisto">Insira a sua password</string>

    <string name="CabecalhoRegistarConta">Registar conta</string>
    <string name="Reservas">Reservas</string>
    <string name="Conta">Conta</string>
    <string name="ndOpen">open</string>
    <string name="ndClose">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="semEmail">Sem Email</string>
    <string name="tvUsername">Nome de utilizador</string>
    <string name="tvPassword">Palavra Passe</string>
    <string name="todo">TODO</string>
    <string name="tvTituloLogin">TOPHOTELS</string>
    <string name="Logout">Logout</string>
    <string name="tvUsernameRegisto">Nome de utilizador</string>
    <string name="tvEmailRegisto">Endereço de email</string>
    <string name="tvPasswordRegisto">Palavra passe</string>
    <string name="btRegistar">Registar</string>
    <string name="tvConfirmaPasswordRegisto">Confirmar palavra passe</string>
    <string name="btGuardar">Guardar</string>
    <string name="tvNomeDetalhe">Primeiro Nome</string>
    <string name="tvApelidoDetalhe">Apelido</string>
    <string name="tvDataNascimentoDetalhe">Data de nascimento</string>
    <string name="tvNifDetalhe">NIF</string>
    <string name="tvMoradaDetalhe">Morada</string>
    <string name="tvCartaoCreditoDetalhe">Cartão de crédito</string>
    <string name="tvTelefoneDetalhe">Telefone</string>
    <string name="Pesquisar">Pesquisar</string>
    <string name="localidade">Localidade</string>
    <string name="btForgot">Pedir password</string>
    <string name="tvNomeHotelPesquisa">Hotel: </string>
    <string name="tvDescricaoHotelPesquisa">Descrição: </string>
    <string name="tvPrecoHotelPesquisa">Preços: </string>
    <string name="tvNumPessoasListaReservas">Nº Pessoas: </string>
    <string name="tvPrecoListaReservas">Preço: </string>
    <string name="tvCheckOutListaReservas">Data de Check Out: </string>
    <string name="tvCheckInListaReservas">Data de Check In: </string>
    <string name="tvEstadoListaReservas">Estado: </string>
    <string name="tvHotelDescricaoListaReservas">Hotel: </string>
    <string name="tvDataInicialPesquisa">Data Inicial:</string>
    <string name="tvDataFinalPesquisa">Data Final:</string>
    <string name="tvNrPessoasPesquisa">Nº pessoas:</string>
    <string name="tvRegiaoPesquisa">Região:</string>
    <string name="tvNomeQuarto">Quarto:</string>
    <string name="tvPrecoNoite">Preço:</string>
    <string name="tvEstadoQuarto">Estado:</string>
    <string name="tvComodidadesHotel">Comodidades do hotel</string>
    <string name="tvComodidadesQuarto">Comodidades do quarto</string>
    <string name="tvDescricaoHotelDetalhes">Descrição:</string>
    <string name="tvContactoHotelDetalhes">Contacto:</string>
    <string name="tvMoradaHotelDetalhes">Morada:</string>
    <string name="tvRegiaoHotelDetalhes">Região:</string>
    <string name="tvWebsiteHotelDetalhes">Website:</string>
    <string name="tvNomeHotelDetalhes">Nome:</string>
    <string name="tvCodigoPostalHotelDetalhes">Código Postal:</string>
    <string name="tvDescricaoQuartoDetalhes">Descrição:</string>
    <string name="tvPrecoQuartoDetalhes">Preço:</string>
    <string name="tvCategoriaQuartoDetalhes">Categoria:</string>
</resources>