<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="135dp">

        <ImageView
            android:id="@+id/ivCapa"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="52dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/hotel"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvTituloLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="12dp"
            android:text="@string/tvTituloLogin"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="135dp">

        <TextView
            android:id="@+id/tvUsernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/tvUsername"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etNomeUtilizadorLogin"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tvPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etPasswordLogin"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onClickLogin"
            android:text="@string/btEntrar"
            app:backgroundTint="@android:color/holo_red_light" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvEsqueceuSenhaLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="mostrarEsqueceuSenha"
                android:text="@string/tvEsqueceuSenha"
                android:focusable="true" />

            <TextView
                android:id="@+id/tvRegistoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="mostrarActivityRegistarConta"
                android:text="@string/tvRegisto"
                android:textColor="@android:color/holo_red_light"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>